// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFocus set focus 1`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  no focus
</div>
`;

exports[`withFocus set focus 2`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  focus
</div>
`;

exports[`withFocus skip focus when mouse active 1`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  no focus
</div>
`;

exports[`withFocus skip focus when mouse active 2`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  no focus
</div>
`;

exports[`withFocus skip focus when mouse active 3`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  focus
</div>
`;

exports[`withFocus skip focus when mouse active 4`] = `
<div
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
>
  no focus
</div>
`;
